# perlflow

./: .dockerignore  .gitignore  README.md  SESSION2_PROGRESS.md  SESSION3_SUMMARY.md  SESSION4_PROGRESS.md  SESSION7_PROGRESS.md  SESSION8_PROGRESS.md  SESSION9A_PROGRESS.md  SESSION_2_PROGRESS_REPORT.md  SESSION_2_PROGRESS_SUMMARY.md  SESSION_FINAL_PROGRESS.md  SESSION_SUMMARY.md  app_spec.txt  claude-codebase-digest.json  claude-progress.txt  claude-session-progress.txt  claude-session2-progress.txt  docker-compose.yml  feature_list.json  init.sh  package.json  pnpm-lock.yaml  token-consumption-report.json  tsconfig.json  turbo.json  update_additional_features.py  update_features.py  update_resource_optimiser.py
apps/api/: Dockerfile  README.md  SESSION9_PROGRESS.md  SESSION_DEEPAGENTS_INVESTIGATION.md  pyproject.toml
apps/api/scripts/: init_db.py  seed_db.py
apps/api/src/: __init__.py  main.py  models.py
apps/api/src/agent_framework/: __init__.py
apps/api/src/agents/: __init__.py  intake.py  receptionist.py  scheduler.py
apps/api/src/core/: __init__.py  compliance.py  config.py  database.py
apps/api/src/models/: __init__.py  appointment.py  clinic.py  dentist.py  feedback.py  move_offer.py  patient.py  procedure.py  session.py  sms_notification.py  waitlist.py
apps/api/src/routes/: __init__.py  admin.py  appointments.py  chat.py  heuristics.py  notifications.py  patients.py  session.py  sms.py  waitlist.py
apps/api/src/schemas/: __init__.py  session.py  sms.py
apps/api/src/services/: move_offer_service.py  notification_scheduler.py  sms.py  sms_service.py  waitlist_notifications.py  waitlist_service.py
apps/api/src/tools/: __init__.py  availability.py  booking.py  heuristics.py  offers.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/integration/: test_sms_integration.py  test_waitlist_integration.py
apps/api/tests/unit/: test_admin.py  test_admin_move_offers.py  test_appointments.py  test_chat.py  test_compliance.py  test_docker_build.py  test_docker_compose.py  test_e2e_infrastructure.py  test_future_enhancement_readiness.py  test_future_enhancements.py  test_heuristics.py  test_move_offer_expiration.py  test_notifications.py  test_patients.py  test_session.py  test_tools.py  (+4 more)
(+214 files in other folders)
